--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
